--- a/config/database.yml
+++ b/config/database.yml
@@ -5,21 +5,27 @@
 #   gem 'sqlite3'
 #
 default: &default
-  adapter: sqlite3
+  adapter: mysql2
   pool: 5
   timeout: 5000
 
 development:
   <<: *default
-  database: db/development.sqlite3
+  database: mysql2
+  database: bookstore_development
+  username: bookstore
+  password: oikonomia
 
 # Warning: The database defined as "test" will be erased and
 # re-generated from your development database when you run "rake".
 # Do not set this db to the same as development or production.
 test:
   <<: *default
-  database: db/test.sqlite3
-
+  adapter: mysql2
+  database: bookstore_test
+  username: bookstore
+  password: oikonomia
+  
 production:
   <<: *default
   database: db/production.sqlite3
